--- a/03 - Vue3组件应用及单文件组件 - 抽象独立的代码/02-组件的概念及组件的基本使用方式/my-demo.html
+++ b/03 - Vue3组件应用及单文件组件 - 抽象独立的代码/02-组件的概念及组件的基本使用方式/my-demo.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="../vue.global.js"></script>
@@ -14,33 +13,25 @@
     <script>
       let app = Vue.createApp({
         data() {
-          return {}
-        }
+          return {
+            message: 'my app'
+          }
+        },
+        methods: {}
       })
-      app.component('my-head', {
+      let MyHead = {
         template: `
-        <header>
-          <div>{{ message }}</div>
-          <h2>logo</h2>
-          <ul>
-            <li>首页</li>
-            <li>视频</li>
-            <li>音乐</li>
-          </ul>
-        </header>
-      `,
+      <header>
+        <h2>{{message}}</h2>
+        </header>`,
+
         data() {
           return {
             message: 'hello world'
           }
-        },
-        mounted() {
-          setTimeout(() => {
-            this.message = 'hi component'
-          }, 2000)
         }
-      })
-
+      }
+      app.component('MyHead', MyHead)
       let vm = app.mount('#app')
     </script>
   </body>
